fixed button animation so that it doesn't jump to the right

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -80,4 +80,5 @@ textarea{
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+  margin: 10%;
 }
